# pytemplate

./: .bumpversion.toml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.trae/docs/: iter-01-模板修复与CLI完善.md  iter-03-移除jinja2-time扩展.md  iter-04-模板年份改用strftime过滤器.md  iter-09-修复Node20弃用警告.md  iter-10-项目问题修复与优化.md  iter-11-CLI子命令重构.md  iter-14-精简README用户导向.md  iter-17-回退工具配置拆分.md  iter-19-new命令网络卡死修复.md  iter-20-gitee国内源与多远程推送.md  iter-22-移除cli工具改为纯模板仓库.md  iter-23-恢复cli工具.md  iter-24-移除initial_version模板变量.md  iter-26-python项目结构骨架SKILL.md  iter-27-规则与SKILL冲突修复.md
.trae/documents/: CLI子命令重构.md
.trae/req/: req-07-bump目标默认patch.md  req-10-项目问题修复与优化.md  req-11-CLI子命令重构.md  req-12-项目类型选择与编码规范.md  req-14-精简README用户导向.md  req-17-回退工具配置拆分.md  req-19-new命令网络卡死修复.md  req-20-gitee国内源与多远程推送.md  req-21-gui设计规范与模板rule12填充.md  req-23-恢复cli工具.md  req-24-移除initial_version模板变量.md  req-26-python项目结构骨架SKILL.md  req-27-规则与SKILL冲突修复.md
.trae/req/done/: req-18-Windows文件名兼容.md  req-22-移除cli工具改为纯模板仓库.md
.trae/rules/: python-standards.md  rule-01-开发流程.md  rule-02-产物约束.md  rule-09-git提交规则.md  rule-11-python-standards.md  rule-12-pyqt-standards.md  rule-12-pyside-dev.md
.trae/skills/: skill-13-PySide6支持与版本区分.md  skill-15-req清理规则优化与PyPI-badge调查.md  skill-16-拆分工具配置到独立文件.md
.trae/skills/python-gui-pyside/: SKILL.md
.trae/skills/python-performance/: SKILL.md
.trae/skills/python-project-structure/: SKILL.md
.trae/skills/python-testing/: SKILL.md
docs/: changelog.rst  conf.py  index.rst  parameters.rst  usage.rst
src/coopie/: __init__.py  cli.py
template/: .bumpversion.toml  .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pyrefly.toml  ruff.toml  uv.toml  {% if license != 'None' %}LICENSE{% endif %}  {% if use_docker %}Dockerfile{% endif %}  {% if use_tox %}tox.ini{% endif %}
template/.trae/rules/: rule-01-开发流程.md  rule-02-产物约束.md  rule-03-触发场景.md  rule-11-python-standards.md  {% if project_type == "gui" %}rule-12-pyqt-standards.md{% endif %}  {% if project_type == 'gui' %}rule-12-gui-pyside-standards.md{% endif %}
template/.trae/skills/python-project-structure/: SKILL.md
template/.trae/skills/python-testing/: SKILL.md
template/src/{{ package_name }}/: __init__.py  {% if project_type == "cli" %}cli.py{% endif %}  {% if project_type == "gui" %}main.py{% endif %}  {% if project_type == "web" %}app.py{% endif %}
template/{% if use_cicd %}.github{% endif %}/workflows/: ci.yml  release.yml
template/{% if use_docs %}docs{% endif %}/: conf.py
tests/: test_cli.py
