[project]
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

description     = "基于 copier 的通用 Python 项目模板，通过 `copier copy` 一键生成开箱即用的工程骨架。"
license         = "MIT"
name            = "coopie"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.8.0"

[project.optional-dependencies]
dev = [
    "coopie[lint,docs]",
    "prek>=0.4.5",
]
docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]

[[tool.uv.index]]
default = true
url     = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv]
required-version = ">=0.5.0"

[dependency-groups]
dev = ["coopie[dev]"]

# Ruff 配置 - 用于校验 docs/conf.py 与 template 中 Jinja 模板的 Python 语法
[tool.ruff]
extend-exclude = ["template", ".venv"]
line-length    = 120
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLC0415", # import should be at top-level (intentional for lazy imports)
    "PLR0915", # too many statements (intentional for complex methods)
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode characters in string
    "RUF002",  # ambiguous unicode characters in docstring
    "RUF003",  # ambiguous unicode characters in comment
    "RUF012",  # mutable class attributes (intentional for config)
    "SIM108",  # use ternary operator
]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.pyrefly]
preset           = "strict"
project-excludes = [".venv/**", "template/**", "docs/_build/**"]
project-includes = ["**/*.ipynb", "**/*.py*"]
python-version   = "3.8"
search-path      = ["."]

# bump-my-version 配置 - 用于管理模板版本号（copier 通过 git tag 识别模板版本）
[tool.bumpversion]
current_version = "0.8.0"
commit = true
exclude = ["template/*", ".trae/**"]
message = "chore: 更新版本 {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(version\s+=\s+)"{current_version}"'
replace = '\1"{new_version}"'

[[tool.bumpversion.files]]
filename = ".copier-answers.yml"
regex = true
search = '_commit: v{current_version}'
replace = '_commit: v{new_version}'
