[project]
authors = [{ name = "gooker_young", email = "gooker_young@qq.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies    = [
    "copier>=9.0.0",
    "jinja2-time>=0.2.0",
    # prompt-toolkit 3.0.52 改变了 PromptSession 默认布局结构，questionary 2.1.0 的
    # _fix_unecessary_blank_lines 访问 VSplit.content（已不存在）导致 AttributeError。
    # 等待 questionary 上游修复后可移除此上限。
    "prompt-toolkit<3.0.52",
    "typer>=0.20.0",
]
description     = "基于 copier 的通用 Python 项目模板，通过 coopie CLI 或 copier copy 一键生成开箱即用的工程骨架。"
license         = "MIT"
name            = "coopie"
readme          = "README.md"
requires-python = ">=3.8"
version         = "0.8.6"

[project.scripts]
coopie = "coopie.cli:main"

[project.optional-dependencies]
dev = [
    "coopie[lint,docs,test]",
    "prek>=0.4.5",
]
docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = ["pytest-cov>=5.0.0", "pytest>=8.0.0"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/coopie"]

[tool.hatch.build.targets.wheel.force-include]
"src/coopie/py.typed" = "coopie/py.typed"

[dependency-groups]
dev = ["coopie[dev]"]