[project]
authors = [{ name = "{{ author_name }}"{% if author_email %}, email = "{{ author_email }}"{% endif %} }]
classifiers = [
    "Programming Language :: Python :: 3",
{% for v in supported_py_versions %}    "Programming Language :: Python :: {{ v }}",
{% endfor %}    "Topic :: Software Development :: Libraries :: Python Modules",
]

{% if license != "None" %}license = "{{ license }}"
{% endif %}name = "{{ package_name }}"
dependencies = ["typing-extensions>=4.13.2; python_version < '3.13'"]
description = "{{ description }}"
readme = "README.md"
requires-python = ">={{ min_python_version }}"
version = "0.1.4"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "prek>=0.4.5",
    "pyrefly>=1.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
{% if use_tox %}    "tox-uv>=1.13.1",
    "tox>=4.25.0",
{% endif %}]
{% if use_docs %}docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
{% endif %}
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

{% if use_domestic_mirrors %}
[tool.uv]
required-version = ">=0.5.0"
[[tool.uv.index]]
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

{% endif %}
[tool.hatch.build.targets.wheel]
packages = ["src/{{ package_name }}"]

[tool.hatch.build.targets.wheel.force-include]
"src/{{ package_name }}/py.typed" = "{{ package_name }}/py.typed"

[dependency-groups]
dev = ["{{ package_name }}[dev{% if use_docs %},docs{% endif %}]"]

[tool.coverage.run]
branch = true
concurrency = ["thread"]
omit = ["tests/*"]
source = ["{{ package_name }}"]

[tool.coverage.report]
fail_under = {{ coverage_fail_under }}
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

# Ruff 配置 - 与 .pre-commit-config.yaml 保持一致
[tool.ruff]
line-length = 120
target-version = "{{ target_py }}"

[tool.ruff.lint]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLC0415", # import should be at top-level (intentional for lazy imports)
    "PLR0915", # too many statements (intentional for complex methods)
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode characters in string
    "RUF002",  # ambiguous unicode characters in docstring
    "RUF003",  # ambiguous unicode characters in comment
    "RUF012",  # mutable class attributes (intentional for config)
    "SIM108",  # use ternary operator
]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG001", "ARG002"]

[tool.pyrefly]
preset = "strict"
project-includes = ["**/*.ipynb", "**/*.py*"]
python-version = "{{ min_python_version }}"
search-path = ["."]
