[project]
authors = [{ name = "{{ author_name }}"{% if author_email %}, email = "{{ author_email }}"{% endif %} }]
classifiers = [
    "Programming Language :: Python :: 3",
{% for v in supported_py_versions %}    "Programming Language :: Python :: {{ v }}",
{% endfor %}    "Topic :: Software Development :: Libraries :: Python Modules",
]

{% if project_type == "gui" %}dependencies    = ["PySide2>=5.15.2.1; python_version <= '3.10'", "PySide6>=6.5.0; python_version >= '3.11'"]
{% elif project_type == "web" %}dependencies    = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
{% else %}dependencies    = []
{% endif %}
description     = "{{ description }}"
{% if license != "None" %}license         = "{{ license }}"
{% endif %}name            = "{{ package_name }}"
readme          = "README.md"
requires-python = ">={{ min_python_version }}"
version         = "{{ initial_version }}"

[project.optional-dependencies]
dev = [
    "{{ package_name }}[lint,test]",
    "prek>=0.4.5",
{% if use_tox %}    "tox-uv>=1.13.1",
    "tox>=4.25.0",
{% endif %}]
{% if use_docs %}docs = ["myst-parser>=3.0", "sphinx-rtd-theme>=2.0", "sphinx>=7.0"]
{% endif %}lint = ["pyrefly>=1.1.1", "ruff>=0.8.0"]
test = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]
{% if use_cli or project_type == "cli" %}
[project.scripts]
{{ package_name }} = "{{ package_name }}.cli:main"

{% endif %}[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.uv]
required-version = ">=0.5.0"

{% if use_domestic_mirrors %}[[tool.uv.index]]
default = true
url     = "https://mirrors.aliyun.com/pypi/simple/"

{% endif %}[tool.hatch.build.targets.wheel]
packages = ["src/{{ package_name }}"]

[tool.hatch.build.targets.wheel.force-include]
"src/{{ package_name }}/py.typed" = "{{ package_name }}/py.typed"

[dependency-groups]
dev = ["{{ package_name }}[dev{% if use_docs %},docs{% endif %}]"]

[tool.coverage.run]
branch      = true
concurrency = ["thread"]
omit        = ["tests/*"]
source      = ["{{ package_name }}"]

[tool.coverage.report]
fail_under = {{ coverage_fail_under }}
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers                            = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths                          = ["tests"]

# Ruff 配置 - 与 .pre-commit-config.yaml 保持一致
[tool.ruff]
extend-exclude = ["template"]
line-length    = 120
target-version = "{{ target_py }}"

[tool.ruff.lint]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLC0415", # import should be at top-level (intentional for lazy imports)
    "PLR0915", # too many statements (intentional for complex methods)
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode characters in string
    "RUF002",  # ambiguous unicode characters in docstring
    "RUF003",  # ambiguous unicode characters in comment
    "RUF012",  # mutable class attributes (intentional for config)
    "SIM108",  # use ternary operator
]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "PL",  # Pylint
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ARG001", "ARG002"]

[tool.pyrefly]
preset           = "strict"
project-excludes = [".venv/**", "template/**"]
project-includes = ["**/*.ipynb", "**/*.py*"]
python-version   = "{{ min_python_version }}"
search-path      = ["."]

[tool.bumpversion]
current_version = "{{ initial_version }}"
commit = true
exclude = ["template/*"]
message = "chore: 更新版本 {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = '(version\s+=\s+)"{current_version}"'
replace = '\1"{new_version}"'

[[tool.bumpversion.files]]
filename = "src/{{ package_name }}/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'